# pardisodemo

./: README.md
pardisodemo/: 01.cpp  CMakeLists.txt
pardisodemo/include/: head.h
pardisodemo/src/: CMakeLists.txt  Makefile  cmake_install.cmake  t1.cpp
